# GameJam

./: .gitmodules  CMakeLists.txt  Design.md  LICENSE  main.cpp
components/: Beater.cpp  Camera_Manager.cpp  Chat.cpp  Club.cpp  Donator.cpp  Donator_Manager.cpp  EndScreen.cpp  Enemy.cpp  MainMenu.cpp  Player.cpp  Runner.cpp  Runner_Manager.cpp  Scenario.cpp  Sponsor.cpp  Weapon.cpp  Weapons.cpp
data/Donors/: random_chat_messagges.txt  random_chat_names.txt
data/Scenarios/: bar.scene.kat
data/Shaders/: crt_effect.fs  crt_effect.vs  crt_effect_nes.fs
resources/: level.cpp
