cmake_minimum_required ( VERSION 3.13 )

project ( ReKat_GameJam )

option(REKAT_DEBUG ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory ( engine )

KAT_project (
	GameJam2026
	PATH ${CMAKE_CURRENT_SOURCE_DIR}
	RESOURCES_PATH ${CMAKE_CURRENT_SOURCE_DIR}/resources
	ADD_COMPONENTS_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/components
	OUTPUT_PATH ${CMAKE_BINARY_DIR}/GameJam
)